<resources>
    <string name="app_name">Make U</string>

    <string name="valide" >OK</string>

    <!-- Page de connexion-->

    <string name="ImgBgHome">Arriere plan de la page de connexion</string>
    <string name="logIn">Connexion</string>
    <string name="signUp">S\'inscrire</string>
    <string name="darkModeButton">Mode sombre</string>

    <!-- home page-->
    <string name="Home_Text">Accueil</string>
    <string name="Walk_text">Pas</string>



    <!-- PoUp SignIN-->
    <string name="Title">Créer un compte</string>
    <string name="subtitle_phys">Information physique</string>
    <string name="FirstName">Nom |</string>
    <string name="Name">Prénom |</string>
    <string name="Email">Adresse mail |</string>
    <string name="Password">Mots de passe |</string>
    <string name="Password_chek">Confirmer le mots de passe |</string>
    <string name="Phone">Numéros de téléphone |</string>
    <string name="Size">Taille en cm |</string>
    <string name="weight">Poids |</string>
    <string name="SexH">Homme</string>
    <string name="SexF">Femme</string>
    <string name="SexA">Autres</string>

    <!-- PopUp message -->
    <string name="dialog_message"><![CDATA[Votre mot de passe doit être supérieur à 8 caractères et doit contenir une majuscule, des chiffres et un de ces caractères : !@/#$%&*()_+=|<>?{}\\[\\]~-] \]]></string>
    <string name="Mdp">Mot de passe</string>
    
    
    <!-- PopUp Login-->
    <string name="Login">Connexion</string>
    <string name="MdpOublier">Mot de passe oublié</string>
    <string name="resetPassword">Rénitialiser votre mot de passe</string>
    <string name="resetPasswordEmail">Entrer votre Email |</string>
    <string name="Lipide">40% Lipides</string>
    <string name="Proteine">20% Protéine</string>
    <string name="glucide">40% Glucide</string>
    <string name="poids">Poids</string>


</resources>