<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"

    android:paddingStart="50dp"
    android:paddingEnd="50dp"
    android:paddingBottom="20dp"
    android:paddingTop="20dp"
    android:background="@drawable/box"
    app:circularflow_viewCenter="@dimen/Default_Margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        style="@style/DefaultTextStyleWhite"
        android:layout_marginBottom="20dp"
        />

    <EditText
        android:id="@+id/Login_Email"
        style="@style/SubtextButton"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_blue"
        android:inputType="text"
        android:paddingStart="10dp"
        android:hint="@string/Email"
        />
    <EditText
        android:id="@+id/Login_Password"
        style="@style/SubtextButton"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_blue"
        android:inputType="text"
        android:paddingStart="10dp"
        android:hint="@string/Password"
        />

    <Button
        android:id="@+id/Button_valide"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:background="@drawable/button_blue"
        android:text="@string/valide"
        android:layout_marginTop="20dp"/>


</LinearLayout>