<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/image"
        android:scaleType="centerCrop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#0000"
        android:src="@drawable/img_fitness_home"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/ImgBgHome" />


    <Switch
        android:id="@+id/switchHomeDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:checked="false"
        android:text="@string/darkModeButton"
        style="@style/DefaultTextStyleWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        style="@style/MakeU"
        app:layout_constraintBottom_toTopOf="@+id/PopUpLogOrSign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/PopUpLogOrSign"
        android:layout_width="320dp"
        android:layout_height="176dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/box"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image"
        app:layout_constraintVertical_bias="0.8"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <RelativeLayout
            android:id="@+id/BLogIn"
            android:layout_width="197dp"
            android:layout_height="58dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/button">

            <TextView
                style="@style/DefaultTextStyleBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/logIn" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/BSignUp"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="98dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/button">

            <TextView
                style="@style/DefaultTextStyleBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/signUp" />

        </RelativeLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>